--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,6 @@
       href="../favicon.ico"
       type="image/svg+xml"
     >
-    <script type="text/javascript" src="scripts/main.js"></script>
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <!-- #endregion -->
@@ -431,5 +430,11 @@
       </footer>
       <!-- #endregion -->
     </main>
+
+    <script
+      type="text/javascript"
+      src="scripts/main.js"
+      defer
+    ></script>
   </body>
 </html>
